[package]
name = "gmesh"
version = "0.1.0"
authors = ["Arthur Efimow <efimow@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = { version = "*", features = ["derive"] }
stb_image = "*"

[dependencies.gl]
    git = "https://github.com/bjz/gl-rs"
